@@ -1,4 +1,6 @@
 DIST mime-types-7.tar.bz2 6317 RMD160 367726d20183b07b3a00a8e61a2ede397e2cc238 SHA1 625764d38750b1d54a558c89d885154781d4211a SHA256 f86af26e408462dd3e7b4ee1e806422e02ab63b39fc7c32182cadf98b12a6d1a
+DIST mime-types-8.tar.bz2 11969 RMD160 5682df28abeb4a2227fd46788ceac184a79f2a1c SHA1 01682b0ad3111a6cf65e6c9db0c18ddd7523c593 SHA256 1aa86f1be3c8daff96aefb2ddf6c8750105c46cc6f85a549c8506434798f7e2b
 EBUILD mime-types-7.ebuild 663 RMD160 71c6e42e069ed23600cb6aa5151b95e32704a3fb SHA1 47e17e5c4c7e47bf753fbe25720b5a7fcecacf31 SHA256 eb78b6e32c65e615fff7fccc181f4b12df9000abfe29da5c42be9b476d354b04
-MISC ChangeLog 7356 RMD160 bd32c860c36250ea5b9a1b16a0996d3d12d47ae0 SHA1 b3f895f5f1f5542597965f4182793b0bac463425 SHA256 9b1b3e8f2bad7d27c3d59ceafdef5ffb214f3e2c091393cd5890b08e625a80bc
+EBUILD mime-types-8.ebuild 657 RMD160 d065735f971b4936abe6bbb8914131e30702f539 SHA1 eae79780418864b7f34cd40ad7609af05350cefc SHA256 45f8dff37873c81e84fe841f47d60ff2ae4709d50647582a22e74f136ef698f0
+MISC ChangeLog 7521 RMD160 ee3398738b68d44ec4565aa5f96869ac68d93ce3 SHA1 15c96ff09b710e01af4a604036d88398f3fa0b46 SHA256 79e16cc77a75ce32832c06102fe6008ab7be256c559ebf6f39dbf53b563a2d42
 MISC metadata.xml 251 RMD160 5db7259e6049fa2610935859b0e039a62f35dba5 SHA1 d7f9844f4164abc95d5f4c19baad2f6f9df8bed0 SHA256 718eda5cb59df00422720a950741e9cb1e70742cd520e85216ebc279c88abca5
